fixed a bug on the frontpage.css where the h1 was overlapping the navbar

--- a/src/Components/FrontPage/FrontPage.css
+++ b/src/Components/FrontPage/FrontPage.css
@@ -11,7 +11,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 1.5vmin);
-  
+
 }
 .frontPageHeader {
   text-align: center;
@@ -22,6 +22,12 @@
   margin-bottom: 20px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   animation: glowEffect 2s ease-in-out infinite alternate;
+}
+
+@media screen and (max-width: 600px) {
+  .frontPageHeader {
+    font-size: 3rem; /* Adjust as needed */
+  }
 }
 
 @keyframes glowEffect {
@@ -59,3 +65,9 @@
   background-color: #2186c4;
   animation: Gradient 3s ease infinite;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);}
+
+  body, html {
+    height: 100%;
+    overflow-y: auto; /* This allows for vertical scrolling */
+  }
+  
